--- a/.gitignore
+++ b/.gitignore
@@ -888,3 +888,9 @@ artifacts/contracts/auction/auction.sol/IAllowlist.json
 artifacts/hardhat/console.sol/console.dbg.json
 artifacts/hardhat/console.sol/console.json
 hardhat.config.js
+artifacts/build-info/fc170b6299945b8a496a5a9f548282bb.json
+artifacts/contracts/auction/auction.sol/ERC20Interface.dbg.json
+artifacts/contracts/auction/auction.sol/ERC20Interface.json
+cache/solidity-files-cache.json
+cache/solidity-files-cache.json
+cache/solidity-files-cache.json
