Contrato de la subasta atado con alambre 2

--- a/.gitignore
+++ b/.gitignore
@@ -894,3 +894,4 @@ artifacts/contracts/auction/auction.sol/ERC20Interface.json
 cache/solidity-files-cache.json
 cache/solidity-files-cache.json
 cache/solidity-files-cache.json
+cache/solidity-files-cache.json
