--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "homepage": "https://github.com/labinnovacion/poc-prode-qatar-2022#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
-    "hardhat": "^2.10.2"
+    "hardhat": "^2.10.2",
+    "hardhat-contract-sizer": "^2.6.1"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3"
