--- a/.gitignore
+++ b/.gitignore
@@ -906,3 +906,4 @@ cache/solidity-files-cache.json
 cache/solidity-files-cache.json
 cache/solidity-files-cache.json
 cache/solidity-files-cache.json
+.env
