--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "hardhat": "^2.10.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
+    "@nomiclabs/hardhat-solhint": "^2.0.1",
+    "@openzeppelin/contracts": "^4.7.3",
+    "dotenv": "^16.0.2"
   }
 }
